[package]
name = "dybs"
version = "0.3.0"
authors = ["Skynoodle <iainrobert.maciver@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An experiment in dynamic single-owner, multiple-borrow smart pointers"
readme = "README.md"
repository = "https://github.com/Skynoodle/dybs"
categories = ["memory-management"]

[features]
unstable = []

[dependencies]
